Handle redirects (HTTP <-> HTTPS)